# SENNI

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  ORB_DESIGN.md  README.md  build-embed.bat  build-full.bat  build.bat  check_config.py  config.json  dev-tauri.bat  framework.md  gemma4-e4b_chat_template.jinja  main.py  read_card.py  release.bat  requirements-dev.txt  requirements.txt  run-built.bat  run_tests.bat  senni-backend.spec  setup-tauri.bat  start.bat
.github/: FUNDING.yml
.obsidian/: workspace.json
design/: ARCHITECTURE.md  BOOT.md  CHARA_CARD.md  COMPANION_STACK.md  FEATURES.md  IDENTITY.md  MEMORY.md  MOOD.md  ORB_DESIGN.md  SESSIONS.md  SETTINGS-REDESIGN.md  SETUP_WIZARD.md  SYSTEMS.md  TAURI_SIDECAR.md  TTS.md  UI-REDESIGN.md  UI_DESIGN.md  WIZARD.md
installation/: delete-duplicate-memories.txt  how-to-install-or-update-llama_cpp.txt  update_llama.py
scripts/: __init__.py  auto_backup.py  boot_service.py  build_prep.py  config.py  create_tauri_icons.py  diagnostics.py  history_router.py  memory_server.py  memory_store.py  paths.py  server.py  settings_router.py  setup_router.py  tag_release.py  tool_loader.py  tts.py  tts_server.py  wizard_compile.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
static/: chat.html  companion-wizard.html  senni-intro - Copy.html  senni-intro.html  ui-showcase.html  wizard.html
templates/: companion_identity.md  identity.md  session_notes.md
tests/: conftest.py  test_boot_service.py  test_history_router.py  test_settings_router.py
(+73 files in other folders)
