[package]
name    = "senni"
version = "0.1.0"
edition = "2021"

[lib]
name       = "senni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater         = "2"
tauri-plugin-dialog          = "2"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
ureq                  = { version = "2", default-features = false, features = ["tls"] }
image                 = { version = "0.25", default-features = false, features = ["png"] }
base64                = "0.22"
